kubernetes/namespaces/tooling/policy-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-bot
  namespace: tooling
spec:
  selector:
    app: policy-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
